--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
         <form id="note-form">
             <textarea id="note-input" placeholder="Напиши что-нибудь..." required></textarea>
             <button type="submit">Добавить</button>
+
         </form>
 
         <div id="notes-list"></div>
         <button id="load-sample">📥 Импортировать шаблоны</button>
+        <div id="loader" style="display: none;">⏳ Загружаем...</div>
+
     </main>
 
     <script src="script.js"></script>
