🚀 Финал: добавлены loader, импорт/экспорт, разворот текста

--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
         </form>
 
         <div id="notes-list"></div>
-        <button id="load-sample">📥 Импортировать шаблоны</button>
         <div id="loader" style="display: none;">⏳ Загружаем...</div>
+        <button id="export-notes">💾 Экспорт заметок</button>
+        <input type="file" id="import-file" style="display: none;" accept=".json">
+        <button id="import-notes">📂 Импорт из файла</button>
+
 
     </main>
 
